add users lazy module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-{{ foods$ | async }}
+<button routerLink="/foods">foods</button>
+<button routerLink="/users">Users</button>
 
-
-<button (click)="getSnapshot()">Get Snapshot</button>
+<router-outlet></router-outlet>
