add authenticaton state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-{{ foods$ | async }}
+<input type="text" [(ngModel)]="username" placeholder="username">
+<input type="text" [(ngModel)]="password" placeholder="username">
+<button (click)="login()">Login</button>
+<button (click)="logout()">Logout</button>
 
+้<hr>
 
-<button (click)="getSnapshot()">Get Snapshot</button>
+{{ user$ | async | json }}
